--- a/googlecharts.css
+++ b/googlecharts.css
@@ -4,7 +4,7 @@
   background-color: #ebff79;
   width:100%;
   height: 100%;
-  flex: 1;
+  /* flex: 1; */
   margin: 0;
   /* justify-content: space-between; */
 }
@@ -14,7 +14,7 @@
   flex-flow: row;
   width:100%;
   height: 100%;
-  flex: 0.2;
+  flex: 5%;
   justify-content: center;
   background-color: #d7fc0565;
   background-image: linear-gradient(-90deg, rgb(50, 1, 56), rgb(253, 201, 233));
@@ -30,7 +30,7 @@
   flex-flow: row;
   width:100%;
   height: 100%;
-  flex: 0.2;
+  flex: 5%;
   justify-content: center;
   background-color: #05f5fd;
   /* background-color: red; */
@@ -49,7 +49,7 @@
   background-color: #ebff79;
   width:100%;
   height: 100%;
-  flex: 4;
+  flex: 90%;
   margin: 0;
   /* justify-content: space-between; */
 }
@@ -59,7 +59,7 @@
   flex-flow: column;
   background-color: #7c0208;
   background-image: linear-gradient(180deg, rgb(50, 1, 56), rgb(253, 201, 233));
-  flex: 4;
+  flex: 20%;
   justify-content: flex-start;
 }
 
@@ -69,8 +69,8 @@
 }
 
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-image: linear-gradient(-90deg, rgb(27, 2, 31), rgb(54, 1, 34));
+  color: #FFFFFF;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -88,7 +88,7 @@
 .panel {
   padding: 0 18px;
   display: none;
-  background-color: white;
+  background-image: linear-gradient(180deg, rgb(50, 1, 56), rgb(253, 201, 233));
   overflow: hidden;
 }
 
@@ -107,7 +107,7 @@
   background-image: linear-gradient(-90deg, rgb(50, 1, 56), rgb(253, 201, 233)); /* Standard syntax (must be last) */
   width:100%;
   height: 100%;
-  flex: 16;
+  flex: 80%;
 }
 
 .data-container p {
@@ -116,17 +116,17 @@
 }
 
 .filters-container .date_selection_message {
-  color: #FF0000;
+  color: rgb(229, 255, 115);
   font-weight: bold;
   align-items: flex-end;
-  /* margin:0; */
-  background-color: #FFFFFF;
+  background-image: linear-gradient(180deg, rgb(203, 20, 228), rgb(231, 52, 162));
 }
 
 .custom-dates-container {
   display: flex;
   flex-flow: row;
   margin:0;
+  background-image: linear-gradient(180deg, rgb(50, 1, 56), rgb(253, 201, 233));
   /* background-color: rgb(55, 231, 158); */
   justify-content: space-evenly;
 }
@@ -137,7 +137,6 @@
   color: #FFFFFF;
   align-items: flex-start;
   margin:0;
-  /* background-color: rgb(55, 231, 158); */
   justify-content: space-evenly;
 }
 
@@ -151,12 +150,19 @@
   /* justify-content: space-around; */
 }
 
+#custom_date_button {
+  background-color: #2eacde;
+  color: white;
+  border-color : #2eacde;
+  font-size: 14;
+}
+
 .highlights-container {
   display: flex;
   flex-flow: row;
   width:100%;
   height: 100%;
-  flex: .85;
+  flex: 25%;
 }
 
 .charts-container {
@@ -164,7 +170,7 @@
   flex-flow: row;
   width:100%;
   height: 100%;
-  flex: 1.2;
+  flex: 40%;
 }
 
 .tables-container {
@@ -172,7 +178,7 @@
   flex-flow: row;
   width:100%;
   height: 100%;
-  flex: 1;
+  flex: 35%;
 }
 
 .date-button {
@@ -249,7 +255,7 @@
 }
 
   .charts-card {
-      background-color: #fafafa
+      background-color: #fafafa;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
       width: 300;
