--- a/googlecharts.css
+++ b/googlecharts.css
@@ -6,11 +6,7 @@
   display: flex;
   flex-flow: column;
   background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-  /* width:100%;
-  height: 100%; */
-  /* flex: 1; */
   margin: 0;
-  /* justify-content: space-between; */
 }
 
 .navbar {
@@ -35,12 +31,16 @@
   color: black;
 }
 
+/* Change color on hover */
+.navbar .active-page {
+  background-color: #ddd;
+  color: black;
+}
+
 .header-container {
   display: flex;
   flex-flow: row;
-  /* width:100%;
-  height: 100%; */
-  flex: 5%;
+  flex: 10%;
   align-items: center;
   justify-content: center;
   background-color: #d7fc0565;
@@ -52,88 +52,51 @@
   text-align:center;
 }
 
+.selected-date-label {
+  display: flex;
+  flex-flow: row;
+  flex: 2%;
+  color: rgb(16, 17, 59);
+  font-weight: bold;
+  font-style: italic;
+  align-items: center;
+  margin:0;
+  justify-content: center;
+}
+
 .footer-container {
   display: flex;
   flex-flow: row;
-  /* width:100%;
-  height: 100%; */
-  flex: 2%;
+  flex: 1%;
   justify-content: center;
   background-color: #05f5fd;
-  /* background-color: red; */
   background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /* Standard syntax (must be last) */
   
 }
 
 .footer-container p {
-  color:#FFFFFF;
+  color:#000000;
   text-align:center;
 }
 
 .dashboard-container {
   display: flex;
   flex-direction: row;
-  /* background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); */
-  /* width:100%;
-  height: 100%; */
-  flex: 90%;
+  flex: 81%;
   margin: 0;
   justify-content: center;
-}
-
-.filters-container {
-  display: flex;
-  flex-flow: row;
-  background-color: #7c0208;
-  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-  flex: 20%;
-  justify-content: flex-start;
-}
-
-.filters-container p {
-  color:#FFFFFF;
-  text-align:left;
-}
-
-.accordion {
-  background-image: linear-gradient(-90deg, rgb(27, 2, 31), rgb(54, 1, 34));
-  color: #FFFFFF;
-  cursor: pointer;
-  padding: 8px;
-  /* width: 100%; */
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.active, .accordion:hover {
-  background-color: #ccc; 
-}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-  overflow: hidden;
 }
 
 .btn-group {
   display: flex;
   flex-flow: row;
-  /* background-color: rgb(55, 231, 158); */
-  /* justify-content: space-around; */
 }
 
 .data-container {
   display: flex;
   flex-flow: column;
-  /* background-color: #ffa602; */
-  background-color: red; /*For browsers that do not support gradients*/
+  background-color: #f1f1f1; /*For browsers that do not support gradients*/
   background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /*Standard syntax (must be last) */
-  /* width:100%;
-  height: 100%; */
   flex: 82%;
 }
 
@@ -142,19 +105,11 @@
   word-wrap: break-word;
 }
 
-.filters-container .date_selection_message {
-  color: rgb(229, 255, 115);
-  font-weight: bold;
-  align-items: flex-end;
-  background-image: linear-gradient(-90deg, rgb(203, 20, 228), rgb(231, 52, 162));
-}
-
 .custom-dates-container {
   display: flex;
   flex-flow: row;
   margin:0;
   background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-  /* background-color: rgb(55, 231, 158); */
   justify-content: space-evenly;
 }
 
@@ -176,8 +131,6 @@
   align-items: flex-end;
   justify-content: space-evenly;
   margin:0;
-  /* background-color: rgb(55, 231, 158); */
-  /* justify-content: space-around; */
 }
 
 .custom-dates-container .submit-date {
@@ -203,8 +156,6 @@
 .highlights-container {
   display: flex;
   flex-flow: row;
-  /* width:100%;
-  height: 100%; */
   flex: 25%;
   align-items: center;
   justify-content: center;
@@ -213,17 +164,7 @@
 .charts-container {
   display: flex;
   flex-flow: row;
-  /* width:100%;
-  height: 100%; */
   flex: 75%;
-}
-
-.tables-container {
-  display: flex;
-  flex-flow: column;
-  /* width:100%;
-  height: 100%; */
-  /* flex: 100%; */
 }
 
 .date-button {
@@ -277,7 +218,6 @@
     width: 200;
     height:100;
     position: relative;
-    /* border: 3px solid white; */
     background: var(--summarybgcolor, green);
     color: var(--summarytextcolor, white);
     margin: 4px;
@@ -291,7 +231,6 @@
 .summary_metric {
   font-weight: bold;
   font-size: 1.2vw;
-  /* font-size: 40; */
   text-align: center;
 }
 
@@ -305,8 +244,6 @@
       background-color: #fafafa;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
-      /* width: 300; */
-      /* height: 250; */
       margin: 5px;
       flex: 50%;
   }
@@ -328,79 +265,42 @@
   .chart-render {
     flex: 80%;
   }
-  
-  .tables-card {
-    display: flex;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 2200;
-    height: 600; 
-    margin: 10px;
-    /* flex: 100%; */
-    /* object-fit: fill; */
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #FFFFFF;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
-.table-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.26);
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #000000;
+  display: block;
+  transition: 0.3s;
 }
 
-#table-div {
-  justify-content: center;
-  flex:100%;
-} 
-
-.bold-green-font {
-  font-weight: bold;
-  color: green;
+.sidenav a:hover {
+  color: #f1f1f1;
 }
 
-.bold-font {
-  font-weight: bold;
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
-.right-text {
-  text-align: right;
-}
-
-.center-text {
-  text-align: center;
-}
-
-.large-font {
-  font-size: 15px;
-}
-
-.italic-darkblue-font {
-  font-style: italic;
-  color: darkblue;
-}
-
-.italic-purple-font {
-  font-style: italic;
-  color: purple;
-}
-
-.underline-blue-font {
-  text-decoration: underline;
-  color: blue;
-}
-
-.gold-border {
-  border: 3px solid gold;
-}
-
-.deeppink-border {
-  border: 3px solid deeppink;
-}
-
-.orange-background {
-  background-color: orange;
-}
-
-.orchid-background {
-  background-color: orchid;
-}
-
-.beige-background {
-  background-color: beige;
+@media screen and (max-height: 450px) {
+.sidenav {padding-top: 15px;}
+.sidenav a {font-size: 18px;}
 }
