--- a/stopview.css
+++ b/stopview.css
@@ -1,407 +1,306 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
+
+.main-container {
+  display: flex;
+  flex-flow: column;
+  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
+  margin: 0;
+}
+
+.navbar {
+  display: flex;
+  background-color: rgb(139, 139, 139);
+  flex: 3%;
+  justify-content: space-evenly;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  color: white;
+  padding: 2px 5px;
+  text-decoration: none;
+  text-align: center;
+  flex: 25%;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Change color on hover */
+.navbar .active-page {
+  background-color: #ddd;
+  color: black;
+}
+
+.header-container {
+  display: flex;
+  flex-flow: row;
+  flex: 10%;
+  align-items: center;
+  justify-content: center;
+  background-color: #d7fc0565;
+  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
+}
+
+.header-container p {
+  color:rgb(16, 17, 59);
+  text-align:center;
+}
+
+.selected-date-label {
+  display: flex;
+  flex-flow: row;
+  flex: 2%;
+  color: rgb(16, 17, 59);
+  font-weight: bold;
+  font-style: italic;
+  align-items: center;
+  margin:0;
+  justify-content: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-flow: row;
+  flex: 1%;
+  justify-content: center;
+  background-color: #05f5fd;
+  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /* Standard syntax (must be last) */
   
-  .main-container {
-    display: flex;
-    flex-flow: column;
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-    /* width:100%;
-    height: 100%; */
-    /* flex: 1; */
-    margin: 0;
-    /* justify-content: space-between; */
-  }
-  
-  .navbar {
-    display: flex;
-    background-color: rgb(139, 139, 139);
-    flex: 3%;
-    justify-content: space-evenly;
-  }
-  
-  /* Style the navigation bar links */
-  .navbar a {
-    color: white;
-    padding: 2px 5px;
-    text-decoration: none;
-    text-align: center;
-    flex: 25%;
-  }
-  
-  /* Change color on hover */
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .header-container {
-    display: flex;
-    flex-flow: row;
-    /* width:100%;
-    height: 100%; */
-    flex: 5%;
-    align-items: center;
-    justify-content: center;
-    background-color: #d7fc0565;
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-  }
-  
-  .header-container p {
-    color:rgb(16, 17, 59);
-    text-align:center;
-  }
-  
-  .footer-container {
-    display: flex;
-    flex-flow: row;
-    /* width:100%;
-    height: 100%; */
-    flex: 2%;
-    justify-content: center;
-    background-color: #05f5fd;
-    /* background-color: red; */
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /* Standard syntax (must be last) */
-    
-  }
-  
-  .footer-container p {
-    color:#FFFFFF;
-    text-align:center;
-  }
-  
-  .dashboard-container {
-    display: flex;
-    flex-direction: row;
-    /* background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); */
-    /* width:100%;
-    height: 100%; */
-    flex: 90%;
-    margin: 0;
-    justify-content: center;
-  }
-  
-  .filters-container {
-    display: flex;
-    flex-flow: row;
-    background-color: #7c0208;
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-    flex: 20%;
-    justify-content: flex-start;
-  }
-  
-  .filters-container p {
-    color:#FFFFFF;
-    text-align:left;
-  }
-  
-  .accordion {
-    background-image: linear-gradient(-90deg, rgb(27, 2, 31), rgb(54, 1, 34));
-    color: #FFFFFF;
-    cursor: pointer;
-    padding: 8px;
-    /* width: 100%; */
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #ccc; 
-  }
-  
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-    overflow: hidden;
-  }
-  
-  .btn-group {
-    display: flex;
-    flex-flow: row;
-    /* background-color: rgb(55, 231, 158); */
-    /* justify-content: space-around; */
-  }
-  
-  .data-container {
-    display: flex;
-    flex-flow: column;
-    /* background-color: #ffa602; */
-    background-color: red; /*For browsers that do not support gradients*/
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /*Standard syntax (must be last) */
-    /* width:100%;
-    height: 100%; */
-    flex: 82%;
-  }
-  
-  .data-container p {
-    display: inline;
-    word-wrap: break-word;
-  }
-  
-  .filters-container .date_selection_message {
-    color: rgb(229, 255, 115);
-    font-weight: bold;
-    align-items: flex-end;
-    background-image: linear-gradient(-90deg, rgb(203, 20, 228), rgb(231, 52, 162));
-  }
-  
-  .custom-dates-container {
-    display: flex;
-    flex-flow: row;
-    margin:0;
-    background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
-    /* background-color: rgb(55, 231, 158); */
-    justify-content: space-evenly;
-  }
-  
-  .custom-dates-container .date-labels {
-    display: flex;
-    flex-flow: column;
-    color: rgb(16, 17, 59);
-    font-weight: bold;
-    font-style: italic;
-    align-items: flex-start;
-    margin:0;
-    justify-content: space-evenly;
-  }
-  
-  .custom-dates-container .start-end-dates {
-    display: flex;
-    flex-flow: column;
-    color: #FFFFFF;
-    align-items: flex-end;
-    justify-content: space-evenly;
-    margin:0;
-    /* background-color: rgb(55, 231, 158); */
-    /* justify-content: space-around; */
-  }
-  
-  .custom-dates-container .submit-date {
-    display: flex;
-    flex-flow: column;
-    color: rgb(250, 0, 0);
-    align-items: flex-start;
-    margin:0;
-    justify-content: space-evenly;
-  }
-  
-  #custom_date_button {
-    background-color: #2eacde;
-    color: white;
-    border-color : #2eacde;
-    font-size: 14;
-  }
-  
-  .data-side-bar{
-    flex:10%;
-  }
-  
-  .highlights-container {
-    display: flex;
-    flex-flow: row;
-    /* width:100%;
-    height: 100%; */
-    flex: 25%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .charts-container {
-    display: flex;
-    flex-flow: row;
-    /* width:100%;
-    height: 100%; */
-    flex: 75%;
-  }
-  
-  .tables-container {
-    display: flex;
-    flex-flow: column;
-    /* width:100%;
-    height: 100%; */
-    /* flex: 100%; */
-  }
-  
-  .date-button {
+}
+
+.footer-container p {
+  color:#000000;
+  text-align:center;
+}
+
+.dashboard-container {
+  display: flex;
+  flex-direction: row;
+  flex: 81%;
+  margin: 0;
+  justify-content: center;
+}
+
+.btn-group {
+  display: flex;
+  flex-flow: row;
+}
+
+.data-container {
+  display: flex;
+  flex-flow: column;
+  background-color: #f1f1f1; /*For browsers that do not support gradients*/
+  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff); /*Standard syntax (must be last) */
+  flex: 82%;
+}
+
+.data-container p {
+  display: inline;
+  word-wrap: break-word;
+}
+
+.custom-dates-container {
+  display: flex;
+  flex-flow: row;
+  margin:0;
+  background-image: linear-gradient(-90deg,#f0f0f0, #ffffff);
+  justify-content: space-evenly;
+}
+
+.custom-dates-container .date-labels {
+  display: flex;
+  flex-flow: column;
+  color: rgb(16, 17, 59);
+  font-weight: bold;
+  font-style: italic;
+  align-items: flex-start;
+  margin:0;
+  justify-content: space-evenly;
+}
+
+.custom-dates-container .start-end-dates {
+  display: flex;
+  flex-flow: column;
+  color: #FFFFFF;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  margin:0;
+}
+
+.custom-dates-container .submit-date {
+  display: flex;
+  flex-flow: column;
+  color: rgb(250, 0, 0);
+  align-items: flex-start;
+  margin:0;
+  justify-content: space-evenly;
+}
+
+#custom_date_button {
+  background-color: #2eacde;
+  color: white;
+  border-color : #2eacde;
+  font-size: 14;
+}
+
+.data-side-bar{
+  flex:10%;
+}
+
+.highlights-container {
+  display: flex;
+  flex-flow: row;
+  flex: 25%;
+  align-items: center;
+  justify-content: center;
+}
+
+.charts-container {
+  display: flex;
+  flex-flow: row;
+  flex: 75%;
+}
+
+.date-button {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: var(--button-bg-color, white);
+  border: none;
+  color: black;
+  padding: 2px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 20px;
+}
+
+.date-button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.date-button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.date-button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.date-button:hover span {
+  padding-right: 25px;
+}
+
+.date-button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.summary-card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    background-color: var(--button-bg-color, white);
-    border: none;
-    color: black;
-    padding: 2px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 20px;
-  }
-  
-  .date-button:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  }
-  
-  .date-button span {
-    cursor: pointer;
-    display: inline-block;
+    width: 200;
+    height:100;
     position: relative;
-    transition: 0.5s;
-  }
-  
-  .date-button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  .date-button:hover span {
-    padding-right: 25px;
-  }
-  
-  .date-button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
-  
-  .summary-card {
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      transition: 0.3s;
-      width: 200;
-      height:100;
-      position: relative;
-      /* border: 3px solid white; */
-      background: var(--summarybgcolor, green);
-      color: var(--summarytextcolor, white);
-      margin: 4px;
-      text-align: center;
-  }
-  
-  .summary-card p {
-    font: bold;
-  }
-  
-  .summary_metric {
-    font-weight: bold;
-    font-size: 1.2vw;
-    /* font-size: 40; */
+    background: var(--summarybgcolor, green);
+    color: var(--summarytextcolor, white);
+    margin: 4px;
     text-align: center;
-  }
-  
-    .summary-card:hover {
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.26);
-  }
-  
-    .charts-card {
-        display: flex;
-        flex-flow: row;
-        background-color: #fafafa;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        /* width: 300; */
-        /* height: 250; */
-        margin: 5px;
-        flex: 50%;
-    }
-    
-    .charts-card:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.26);
-    }
-  
-    .charts-row {
-      display:flex;
-      flex: 50%;
-      flex-flow: column;
-    }
-  
-    .chart-text {
-      flex: 20%;
-    }
-  
-    .chart-render {
-      flex: 80%;
-    }
-    
-    .tables-card {
-      display: flex;
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      transition: 0.3s;
-      width: 2200;
-      height: 600; 
-      margin: 10px;
-      /* flex: 100%; */
-      /* object-fit: fill; */
-  }
-  
-  .table-card:hover {
+}
+
+.summary-card p {
+  font: bold;
+}
+
+.summary_metric {
+  font-weight: bold;
+  font-size: 1.2vw;
+  text-align: center;
+}
+
+  .summary-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.26);
+}
+
+  .charts-card {
+      display: flex;
+      flex-flow: row;
+      background-color: #fafafa;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      margin: 5px;
+      flex: 50%;
   }
   
-  #table-div {
-    justify-content: center;
-    flex:100%;
-  } 
-  
-  .bold-green-font {
-    font-weight: bold;
-    color: green;
+  .charts-card:hover {
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.26);
   }
-  
-  .bold-font {
-    font-weight: bold;
+
+  .charts-row {
+    display:flex;
+    flex: 50%;
+    flex-flow: column;
   }
-  
-  .right-text {
-    text-align: right;
+
+  .chart-text {
+    flex: 20%;
   }
-  
-  .center-text {
-    text-align: center;
+
+  .chart-render {
+    flex: 80%;
   }
-  
-  .large-font {
-    font-size: 15px;
-  }
-  
-  .italic-darkblue-font {
-    font-style: italic;
-    color: darkblue;
-  }
-  
-  .italic-purple-font {
-    font-style: italic;
-    color: purple;
-  }
-  
-  .underline-blue-font {
-    text-decoration: underline;
-    color: blue;
-  }
-  
-  .gold-border {
-    border: 3px solid gold;
-  }
-  
-  .deeppink-border {
-    border: 3px solid deeppink;
-  }
-  
-  .orange-background {
-    background-color: orange;
-  }
-  
-  .orchid-background {
-    background-color: orchid;
-  }
-  
-  .beige-background {
-    background-color: beige;
-  }
-  
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #FFFFFF;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #000000;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+.sidenav {padding-top: 15px;}
+.sidenav a {font-size: 18px;}
+}
